--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   YourIPHasChanged:
     image: mathieumafille/youriphaschanged:latest
+    restart: always
     environment:
       - EMAIL_RECEIVER=email@example.com
       - SLEEP_TIME=150
